--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,14 @@
     "python.analysis.extraPaths": [
         "./tests/unit_test_helper"
     ],
-    "python.linting.pylintArgs": ["--disable=C0111"]
+    "python.linting.pylintArgs": ["--disable=C0111"],
+    "emeraldwalk.runonsave": {
+        "autoClearConsole":true,    
+        "commands": [  
+            {
+                "match": "lab\/.+py",
+                "cmd": "python ${fileDirname}/../../send_to_azure_function_grader.py ${file}",
+            }
+        ]
+    }
 }
