--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,16 @@
 {
-    "python.testing.pytestArgs": [       
-       
-    ],
+    "python.testing.pytestArgs": [],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.analysis.extraPaths": [
         "./tests/unit_test_helper"
     ],
-    "python.linting.pylintArgs": ["--disable=C0111"],
+    "python.linting.pylintArgs": [
+        "--disable=C0111"
+    ],
     "emeraldwalk.runonsave": {
-        "autoClearConsole":true,    
-        "commands": [  
+        "autoClearConsole": true,
+        "commands": [
             {
                 "match": "lab\/.+py",
                 "cmd": "python ${fileDirname}/../../auto_grader.py ${file}",
@@ -20,5 +20,7 @@
                 "cmd": "${fileDirname}\\..\\..\\.venv\\Scripts\\activate.bat && python ${fileDirname}\\..\\..\\auto_grader.py ${file}",
             }
         ]
-    }
+    },
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 3000
 }
