--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,4 @@
 {
-    "python.testing.pytestArgs": [],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "python.analysis.extraPaths": [
-        "./tests/unit_test_helper"
-    ],
-    "pylint.args": [
-        "--disable=C0111"
-    ],
-    "pylint.path": [
-        "/usr/local/py-utils/bin/pylint"
-    ],
-    "flake8.path":[
-        "/usr/local/py-utils/bin/flake8"
-    ],
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.autopep8",
-        "editor.formatOnSave": true
-    },
     "emeraldwalk.runonsave": {
         "autoClearConsole": true,
         "commands": [
@@ -32,5 +13,9 @@
         ]
     },
     "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 3000
+    "files.autoSaveDelay": 3000,
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.autopep8"
+    },
+    "editor.formatOnSave": true
 }
