--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,9 @@
 			"NODE_VERSION": "none"
 		}
 	},
+	"capAdd": [
+		"CAP_LINUX_IMMUTABLE"
+	],
 	// Configure tool-specific properties.
 	"customizations": {
 		// Configure properties specific to VS Code.
@@ -43,7 +46,7 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "virtualenv ~/.venv && echo 'source ~/.venv/bin/activate' >> ~/.bashrc && make install && source ~/.venv/bin/activate && pip install -r requirements.txt",
+	"postAttachCommand": "find tests -type f -name \"*.py\" -exec sudo chattr +i {} \\;",
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"features": {
